[package]
name = "dabuild"
version = "0.1.0-dev0"
description = "Access and use genome builds."
keywords = ["reference", "genome", "build", "bioinformatics"]
edition = "2021"

homepage = "https://github.com/ielis/dabuild"
repository = "https://github.com/ielis/dabuild"
readme = "README.md"
license-file = "LICENSE"

authors = ["Daniel Danis <daniel.gordon.danis@protonmail.com>"]

[dependencies]
num-traits = "0.2.19"
