[package]
name = "dabuild"
version = "0.2.0"
description = "Access genome build metadata"
keywords = ["reference", "genome", "build", "bioinformatics"]
edition = "2021"

homepage = "https://github.com/ielis/dabuild"
repository = "https://github.com/ielis/dabuild"
readme = "README.md"
license-file = "LICENSE"

authors = ["Daniel Danis <daniel.gordon.danis@protonmail.com>"]

[dependencies]
num-traits = "0.2.19"
